--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://loevray.github.io/nwitter"
+  "homepage": "https://loevray.github.io/nwitter"
 }
