--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://loevray.github.io/reNwitter"
+  "homepage": "https://loevray.github.io/nwitter"
 }
